--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,12 @@
 Package: adminlte
 Type: Package
-Title: What the Package Does (Title Case)
-Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Title: Shiny version of AdminLTE Dashboard
+Version: 0.1.0.9000
+Authors@R: c(person(given = "Felipe", family = "Santos", email = "info@autoblocs.com", role = c("aut", "cre")))
+Description: Fully functional AdminLTE theme for shiny. It covers some gaps
+    that shinydashboard has and provides a uniform interface.
+License: GPL-3
 Encoding: UTF-8
 LazyData: true
+URL: https://github.com/autoblocs/adminlte
+BugReports: https://github.com/autoblocs/adminlte/issues
