--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,8 +5,12 @@ Version: 0.1.0.9000
 Authors@R: c(person(given = "Felipe", family = "Santos", email = "info@autoblocs.com", role = c("aut", "cre")))
 Description: Fully functional AdminLTE theme for shiny. It covers some gaps
     that shinydashboard has and provides a uniform interface.
-License: GPL-3
+License: GPL-3 | file LICENSE
 Encoding: UTF-8
 LazyData: true
+Imports:
+    shiny,
+    htmltools
 URL: https://github.com/autoblocs/adminlte
 BugReports: https://github.com/autoblocs/adminlte/issues
+RoxygenNote: 6.0.1
