--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,7 +10,8 @@ Encoding: UTF-8
 LazyData: true
 Imports:
     shiny,
-    htmltools
+    htmltools,
+    shinydashboard
 URL: https://github.com/autoblocs/adminlte
 BugReports: https://github.com/autoblocs/adminlte/issues
 RoxygenNote: 6.0.1
