--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,10 +10,12 @@ export(menuItem)
 export(menuSection)
 export(menuSubItem)
 export(menuTab)
+export(runExample)
 export(userPanel)
 importFrom(htmltools,htmlDependencies)
 importFrom(htmltools,htmlDependency)
 importFrom(shiny,bootstrapPage)
+importFrom(shiny,runApp)
 importFrom(shiny,tags)
 importFrom(shinydashboard,dashboardSidebar)
 importFrom(shinydashboard,sidebarMenu)
