--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(badge)
 export(bodyContentHeader)
+export(box)
 export(breadcrumb)
 export(dashBody)
 export(dashFooter)
@@ -9,12 +10,15 @@ export(dashHeader)
 export(dashLogo)
 export(dashPage)
 export(dashSideBar)
+export(infoBox)
+export(infoBox2)
 export(label)
 export(menuItem)
 export(menuSection)
 export(menuSubItem)
 export(menuTab)
 export(rExample)
+export(tabBox)
 export(tabItem)
 export(tabItems)
 export(updateTabItems)
