add header to dashBody

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,9 @@
 export(badge)
 export(bodyContentHeader)
 export(box)
+export(box2)
 export(breadcrumb)
+export(column)
 export(dashBody)
 export(dashFooter)
 export(dashHeader)
