add renderInfoBox, infoBoxOutput
drop "MoreInfo" href from infoBox2

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,12 +14,14 @@ export(dashPage)
 export(dashSideBar)
 export(infoBox)
 export(infoBox2)
+export(infoBoxOutput)
 export(label)
 export(menuItem)
 export(menuSection)
 export(menuSubItem)
 export(menuTab)
 export(rExample)
+export(renderInfoBox)
 export(tabBox)
 export(tabItem)
 export(tabItems)
